update patches endpoint to allow batches
